# NexDynDiff

./: .gitignore  CMakeLists.txt  LICENSE  README.md
assets/models/basic_contact/: Body2_Pos.csv  basic_contact.json  basic_contact.xml  basic_contact_convert_manifest.json  basic_contact_invalid_barrier.json
assets/models/complex_contact/: Contact_Force.csv  Sphere_Body1_Pos.csv
assets/models/complex_gear_system/: Link_Gear_Vel_Rx.csv  Swing_Arm_Vel_Rx.csv
assets/models/double_pendulum/: double_pendulum.rmd
assets/models/parallel_linkage_mechanism/: Link_Body1_Pos.csv  Link_Body2_Pos.csv  Link_Body2_Vel_Rz.csv  Link_Body3_Pos.csv  Sphere_Body5_Pos.csv  Sphere_Body5_Vel_Rz.csv  parallel_linkage_mechanism.rmd
assets/tools/: README.md  basic_contact_regression.py  compare_timeseries.py  ipc_gap_analysis.py  rmd_to_scene.py
documents/2026.02.25/: DoublePendulumAccelerationAlignmentFixSummary.md  NexDynDiff融合符号距离场SDF提速方案.md  XML_JSON建模文件解析系统实现情况总结.md  XML_JSON建模文件解析系统设计方案.md
examples/: CMakeLists.txt  main.cpp  rb_constraint_test_scenes.cpp
examples/scenes/: hanging_cloth.json
models/: cmame_case_A_multibody_accuracy.json  cmame_case_B_clearance_impact.json  cmame_case_C_multiconstraint_contact.json  cmame_case_D_rigid_flexible_contact.json  double_pendulum_scene.json
models/rb_constraints/: angle_limits.json  attachment.json  ball_joint.json  distance.json  distance_limits.json  hinge.json  hinge_with_limits.json  motor.json  point_on_axis.json  point_with_angle_limit.json  prismatic_press.json  prismatic_slider.json  relative_direction_lock.json  slider.json  spring.json  spring_with_limits.json
models/rb_constraints_xml/: angle_limits.xml  attachment.xml  ball_joint.xml  distance.xml  distance_limits.xml  hinge.xml  hinge_with_limits.xml  motor.xml  point_on_axis.xml  point_with_angle_limit.xml  prismatic_press.xml  prismatic_slider.xml  relative_direction_lock.xml  slider.xml  spring.xml  spring_with_limits.xml
nexdyndiff/: CMakeLists.txt
nexdyndiff/include/: nexdyndiff.h
nexdyndiff/src/core/: Callbacks.h  Console.cpp  Console.h  EventDrivenScript.cpp  EventDrivenScript.h  Logger.cpp  Logger.h  NewtonsMethod.cpp  NewtonsMethod.h  NexDynDiff.cpp  NexDynDiff.h  Settings.cpp  Settings.h  include_api.h
nexdyndiff/src/models/: IntervalVector.h  MeshOutputGroups.cpp  MeshOutputGroups.h  Simulation.cpp  Simulation.h  TimeIntegration.cpp  TimeIntegration.h  distances.cpp  distances.h  time_integration.cpp  types.h
nexdyndiff/src/models/deformables/: DeformableTools.cpp  DeformableTools.h  Deformables.cpp  Deformables.h  DeformablesMeshOutput.cpp  DeformablesMeshOutput.h  PointDynamics.cpp  PointDynamics.h  PointSetHandler.cpp  PointSetHandler.h  deformable_tools.cpp
nexdyndiff/src/models/deformables/line/: EnergySegmentStrain.cpp  EnergySegmentStrain.h
nexdyndiff/src/models/deformables/point/: EnergyLumpedInertia.cpp  EnergyLumpedInertia.h  EnergyPrescribedPositions.cpp  EnergyPrescribedPositions.h
nexdyndiff/src/models/deformables/surface/: EnergyDiscreteShells.cpp  EnergyDiscreteShells.h  EnergyTriangleStrain.cpp  EnergyTriangleStrain.h
nexdyndiff/src/models/deformables/volume/: EnergyTetStrain.cpp  EnergyTetStrain.h
nexdyndiff/src/models/interactions/: ContactAndFrictionData.h  EnergyAttachments.cpp  EnergyAttachments.h  EnergyFrictionalContact.cpp  EnergyFrictionalContact.h  EnergyFrictionalContact_NEW_DRAFT.cpp  EnergyFrictionalContact_NEW_DRAFT.h  FrictionGeometry.cpp  Interactions.cpp  Interactions.h  friction_geometry.cpp  friction_geometry.h
nexdyndiff/src/models/presets/: DeformablesPresetTypes.cpp  DeformablesPresetTypes.h  DeformablesPresets.cpp  DeformablesPresets.h  Presets.cpp  Presets.h  RigidBodyPresets.cpp  RigidBodyPresets.h  deformables_preset_types.cpp
nexdyndiff/src/models/rigidbodies/: EnergyRigidBodyConstraints.cpp  EnergyRigidBodyConstraints.h  EnergyRigidBodyInertia.cpp  EnergyRigidBodyInertia.h  InertiaTensors.cpp  InertiaTensors.h  RigidBodies.cpp  RigidBodies.h  RigidBodiesMeshOutput.cpp  RigidBodiesMeshOutput.h  RigidBodyConstraints.h  RigidBodyConstraintsUi.h  RigidBodyDynamics.cpp  RigidBodyDynamics.h  RigidBodyHandler.cpp  RigidBodyHandler.h  RigidBodyTransformations.cpp  inertia_tensors.cpp  rigid_body_constraint_utils.h  rigidbody_constraints_ui.h  rigidbody_transformations.cpp  rigidbody_transformations.h
nexdyndiff/src/scene/: Include.h  SceneBuilder.cpp  SceneBuilder.h  SceneCache.cpp  SceneCache.h  SceneCsvExporter.cpp  SceneCsvExporter.h  SceneDescription.h  SceneLoader.cpp  SceneLoader.h  SceneMiniParsers.h  SceneParser.cpp  SceneParser.h  SceneRunner.cpp  SceneRunner.h
nexdyndiff/src/tools/: CMakeLists.txt  NexDynDiff.cpp  scene_runner.cpp
nexdyndiff/src/utils/: Mesh.h  MeshGenerators.cpp  MeshUtils.cpp  TimeSeriesUtils.h  blends.cpp  blends.h  include.h  mesh_generators.cpp  mesh_generators.h  mesh_utils.h  unordered_array_set_and_map.h
tests/: BasicContactRegression.cpp  CMakeLists.txt  RbConstraintSceneBaseline.cpp  SceneLoader.cpp  TimeSeriesUtils.cpp  rb_constraints.cpp
tools/: CMakeLists.txt  CompareDoublePendulum.py  RunDoublePendulumScene.cpp
